--- a/frontend/jenkinsfile
+++ b/frontend/jenkinsfile
@@ -15,9 +15,9 @@ pipeline {
   stages {
     stage('install') {
       steps {
-        git branch: 'develop', url: 'https://github.com/LuisArana631/Taller_Jenkins.git'
+        git branch: 'main', url: 'https://github.com/JosueCarrascoH/Taller_Jenkins.git'
         dir('frontend') {
-          sh 'npm install'
+          bat 'npm install'
         }
       }
     }
@@ -25,7 +25,7 @@ pipeline {
     stage('test') {
       steps {
         dir('frontend') {
-          sh 'npm run test'
+          bat 'npm run test'
         }
       }
     }
