--- a/frontend/jenkinsfile
+++ b/frontend/jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
   stages {
     stage('install') {
       steps {
-        git branch: 'main', url: 'https://github.com/JosueCarrascoH/Taller_Jenkins.git'
+        git branch: 'master', url: 'https://github.com/JosueCarrascoH/Taller_Jenkins.git'
         dir('frontend') {
           bat 'npm install'
         }
